# sarimax-xgboost-malaria-model-comoros

./: .gitignore  MLproject  README.md  config.yml  model_lib.py  predict.py  pyproject.toml  train.py
example_data/: future_data.csv  training_data.csv
