[project]
name = "ensemble-sx-climate-health"
version = "1.0.0"
description = "Ensemble S+X — SARIMAX + XGBoost ensemble for probabilistic climate-health forecasting (CHAP-compatible)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "xgboost>=2.0",
    "scikit-learn>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
